# eodhp-utils

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt
.github/workflows/: actions.yaml  coverage.yaml  unit-tests.yaml
eodhp_utils/: messagers.py  runner.py
eodhp_utils/aws/: egress_classifier.py  s3.py
eodhp_utils/pulsar/: client.py  messages.py
tests/: test_messagers.py  test_runner.py
tests/aws/: test_awsclassifier.py  test_s3.py
tests/pulsar/: test_client.py  test_messages.py
