# Copyright 2024 Telespazio UK Ltd
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "eodhp-utils"
dynamic = ["version"]
description = "Utilities for use on EODHP"
readme = "README.md"

requires-python = ">=3.13,<3.14"

license = {file = "LICENSE"}

authors = [
 {name = "Telespazio UK Ltd", email = "hannah.collingwood@telespazio.com" }
]

maintainers = [
 {name = "Telespazio UK Ltd", email = "hannah.collingwood@telespazio.com" }
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "jsonschema",
    "botocore",
    "boto3",
    "pulsar-client",
    "faker",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-processor-baggage",
    "opentelemetry-instrumentation-logging",
    "python-json-logger",
    "pysubnettree",
    "requests",
    "coverage>=7.13.2",
]

[dependency-groups]
dev = [
    "pre-commit",
    "pyright",
    "pytest",
    "pytest-mock",
    "pytest-watcher",
    "pytest-xdist",
    "ruff",
    "validate-pyproject",
    "moto",
    "requests-mock",
]

[project.urls]
homepage = "https://github.com/EO-DataHub/"
repository = "https://github.com/EO-DataHub/eodhp-utils"
changelog = "https://github.com/EO-DataHub/eodhp-utils/master/CHANGELOG.md"

[tool.uv]
package = true

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["eodhp_utils"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
markers = [
  "integrationtest: Integration test"
]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = [
    "E",    # Pycodestyle errors
    "W",    # Pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "FAST", # FastAPI
    "RUF",  # RUF-specific rules
    "SIM",  # Simplifications
    "B",    # Bugbear
    "ANN",  # Annotations
    "PLC",  # Pylint convention
    "PLE",  # Pylint errors
    "UP",   # pyupgrade
    "FURB", # refurb
    "PT",   # pytest
]
ignore = [
    "E501",   # line too long
    "SIM108", # ternary operator
    "SIM103", # return bool directly
    "B008"    # function call in default argument (incompatible with FastAPI)
]
